--- a/Ampalaya.html
+++ b/Ampalaya.html
@@ -35,7 +35,7 @@
             z-index: 1000;
         }
         .header .logo {
-            color: white;
+            color: rgb(89, 244, 37);
             font-size: 26px;
             font-weight: bold;
             text-decoration: none;
@@ -99,10 +99,10 @@
     </header>
 
     <div class="plants-container">
-        <h1 style="text-align: center; color: rgb(5, 5, 5);">Read More</h1>
+        <h1 style="text-align: center; color: rgb(5, 5, 5);"></h1>
 
         <div class="plant-box">
-            <img src="https://images.saymedia-content.com/.image/t_share/MTg4MTgzNTExNTc0NzgzNzg2/ginising-ampalaya-filipino-sauted-bitter-melon.jpg" alt="Ampalaya" class="plant-image">
+            <img src="ampalaya.jpeg" alt="Ampalaya" class="plant-image">
             <div class="plant-content">
                 <h2>Ampalaya (Bitter Melon)</h2>
                 <p>Ampalaya, also known as Bitter Melon (Momordica charantia), is a well-known medicinal plant used widely in traditional medicine. It is especially known for its bitter taste and numerous health benefits.</p>
