--- a/Bayabas.html
+++ b/Bayabas.html
@@ -35,7 +35,7 @@
             z-index: 1000;
         }
         .header .logo {
-            color: white;
+            color: rgb(65, 237, 21);
             font-size: 26px;
             font-weight: bold;
             text-decoration: none;
@@ -86,7 +86,7 @@
     </header>
 
     <div class="plants-container">
-        <h1 style="text-align: center; color: rgb(5, 5, 5);">Bayabas</h1>
+        <h1 style="text-align: center; color: rgb(255, 255, 255);">Bayabas</h1>
 
         <div class="plant-box">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8c/Guava_ID.jpg/640px-Guava_ID.jpg" alt="Bayabas" class="plant-image">
