--- a/Yerba Buena.html
+++ b/Yerba Buena.html
@@ -127,19 +127,13 @@
 <body>
 
   <header class="header">
-    <a href="index.html" class="logo">HerbalHaven</a>
-    <nav class="navbar">
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="blog.html">Blog</a>
-      <a href="contact.html">Contact</a>
-    </nav>
+    <a href="medicinal plants.html" class="logo">Medicinal Plants</a>
   </header>
 
   <div class="plants-container">
     <h1>Yerba Buena</h1>
     <div class="plant-box">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/57/Clinopodium_douglasii_3.jpg/640px-Clinopodium_douglasii_3.jpg" alt="Yerba Buena" class="plant-image">
+      <img src="yerba buena.jpeg" alt="Yerba Buena" class="plant-image">
       <div class="plant-content">
         <h2>Yerba Buena (Clinopodium douglasii)</h2>
         <p>Yerba Buena is a perennial herb belonging to the mint family, widely known in the Philippines for its medicinal properties. It is commonly used in traditional medicine for its soothing, analgesic, and aromatic qualities.</p>
