--- a/plantain.html
+++ b/plantain.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medicinal Plants - Plantain</title>
     <link rel="stylesheet" href="style.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 
     <style>
         * {
@@ -16,11 +16,11 @@
             font-family: cursive;
         }
         body {
-            background-image: url('https://st2.depositphotos.com/1020804/9235/i/950/depositphotos_92359752-stock-photo-green-herbs-on-the-green.jpg');
+            background-image: url('https://img.freepik.com/premium-photo/green-herbal-background-with-fresh-basil-thyme-mint-rosemary-dill-healthy-plantbased_817921-2473.jpg');
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
-            color: rgb(19, 17, 17);
+            color: #131111;
         }
         .header {
             display: flex;
@@ -35,7 +35,7 @@
             z-index: 1000;
         }
         .header .logo {
-            color: white;
+            color: rgb(29, 238, 18);
             font-size: 26px;
             font-weight: bold;
             text-decoration: none;
@@ -43,85 +43,81 @@
         .navbar a {
             color: white;
             text-decoration: none;
-            font-size: 22px;
-            font-weight: bold;
+            font-size: 20px;
             margin-left: 25px;
         }
         .navbar a:hover {
             text-decoration: underline;
         }
-        .plants-container {
+        .plant-container {
             max-width: 1000px;
-            margin: 100px auto;
-            padding: 20px;
+            margin: 120px auto;
+            background-color: rgba(255, 255, 255, 0.85);
+            padding: 40px;
+            border-radius: 15px;
+        }
+        .plant-container h1 {
+            text-align: center;
+            color: #013220;
+            margin-bottom: 30px;
         }
         .plant-box {
-            max-width: 1000px;
-            margin: 0 auto 30px;
-            background: rgba(255, 255, 255, 0.1);
-            padding: 20px;
-            border-radius: 10px;
             display: flex;
             flex-wrap: wrap;
             gap: 20px;
-            min-height: 300px;
         }
         .plant-image {
-            width: 450px;
-            height: 100%;
-            max-height: 100%;
+            width: 100%;
+            max-width: 450px;
             border-radius: 10px;
             object-fit: cover;
             flex-shrink: 0;
         }
+        .plant-content {
+            flex: 1;
+        }
         .plant-content h2 {
-            color: rgb(9, 10, 10);
             font-size: 24px;
+            color: #013220;
+            margin-bottom: 15px;
         }
-        .read-more {
-            background: aqua;
-            color: black;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            text-decoration: none;
-            font-weight: bold;
+        .plant-content p, .plant-content li {
+            font-size: 18px;
+            line-height: 1.7;
         }
-        .read-more:hover {
-            background: white;
+        .plant-content ul {
+            padding-left: 20px;
+            margin-top: 10px;
         }
     </style>
 </head>
 <body> 
     <header class="header">
-        <a href="medicinal plants.html" class="logo">Medicinal Plants</a>
+        <a href="medicinal plants.html" class="logo">Medicinal plants</a> 
     </header>
 
-    <div class="plants-container">
-        <h1 style="text-align: center; color: rgb(5, 5, 5);">Read More</h1>
-
+    <div class="plant-container">
+        <h1>Plantain</h1>
         <div class="plant-box">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Plantain_banana.jpg" alt="Plantain" class="plant-image">
+            <img src="plantain.jpeg" alt="Plantain" class="plant-image">
             <div class="plant-content">
                 <h2>Plantain (Musa paradisiaca)</h2>
-                <p>Plantain, scientifically known as Musa paradisiaca, is a member of the banana family and is widely cultivated for its edible starchy fruit. However, its leaves and plant parts also have notable medicinal properties used in traditional medicine.</p>
-        
+                <p>Plantain, scientifically known as <em>Musa paradisiaca</em>, is a member of the banana family and is widely cultivated for its edible starchy fruit. However, its leaves and plant parts also have notable medicinal properties used in traditional medicine.</p>
                 <h3>Medicinal Uses:</h3>
                 <ul>
-                    <li><strong>Wound Healing:</strong> The leaves of plantain are often used to treat wounds and injuries. They are known for their anti-inflammatory and antimicrobial properties, helping wounds heal faster and preventing infections.</li>
-                    <li><strong>Respiratory Health:</strong> Plantain leaves are used in traditional remedies for treating coughs, asthma, and bronchitis. The leaves are typically brewed into tea or used as an infusion to soothe the respiratory system.</li>
-                    <li><strong>Digestive Health:</strong> Plantain has a high fiber content that aids in digestion, preventing constipation and supporting bowel health.</li>
-                    <li><strong>Anti-inflammatory:</strong> The leaves and extracts of plantain have been shown to reduce inflammation, making it useful for treating conditions such as arthritis and muscle pain.</li>
-                    <li><strong>Skin Care:</strong> Plantain is used in the treatment of various skin conditions, such as eczema, rashes, and insect bites. Plantain leaves are crushed and applied to the skin to alleviate irritation.</li>
-                    <li><strong>Blood Sugar Control:</strong> Some studies suggest that plantain can help regulate blood sugar levels, making it beneficial for people with diabetes.</li>
-                    <li><strong>Detoxification:</strong> Plantain is believed to help detoxify the body by promoting the elimination of toxins through increased urine production.</li>
-                    <li><strong>Antioxidant Benefits:</strong> Plantain contains antioxidants that help protect the body against oxidative stress and reduce the risk of chronic diseases.</li>
+                    <li><strong>Wound Healing:</strong> The leaves are used to treat wounds due to their antimicrobial properties.</li>
+                    <li><strong>Respiratory Health:</strong> Used in teas for coughs, asthma, and bronchitis.</li>
+                    <li><strong>Digestive Health:</strong> High fiber content helps prevent constipation.</li>
+                    <li><strong>Anti-inflammatory:</strong> Effective in treating muscle pain and inflammation.</li>
+                    <li><strong>Skin Care:</strong> Alleviates eczema, rashes, and insect bites.</li>
+                    <li><strong>Blood Sugar Control:</strong> May assist in managing diabetes symptoms.</li>
+                    <li><strong>Detoxification:</strong> Promotes toxin removal via urine.</li>
+                    <li><strong>Antioxidants:</strong> Protects against oxidative stress and chronic diseases.</li>
                 </ul>
-        
-                <p>Plantain is a versatile and effective plant used in many traditional medicine practices. While it offers numerous health benefits, it's always recommended to consult with a healthcare professional before using it for medical purposes.</p>
+                <p>As with any medicinal plant, consult a healthcare provider before regular use.</p>
             </div>
+            <a href="index.html" class="back-link">← Back to Plant List</a>
+        </main>
         </div>
-    </div>
 </body>
 </html>
