--- a/Garlic.html
+++ b/Garlic.html
@@ -114,13 +114,7 @@
 <body>
 
   <header class="header">
-    <a href="index.html" class="logo">HerbalHaven</a>
-    <nav class="navbar">
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="blog.html">Blog</a>
-      <a href="contact.html">Contact</a>
-    </nav>
+    <a href="medicinal plants.html" class="logo">Medicinal plants</a>
   </header>
 
   <main class="content">
